--- a/client/src/Components/Contact.css
+++ b/client/src/Components/Contact.css
@@ -1,13 +1,12 @@
 .footer-container {
-    background: black;
+    background: rgb(218, 211, 211);
     max-width: 2240px;
-    margin: 0 auto;
     padding: 16px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 8px;
     color: #978282;
-    margin-top: 0;
+    margin-top: 50px;
   }
   
   .footer-logo {
