--- a/client/src/Components/EventDetails.css
+++ b/client/src/Components/EventDetails.css
@@ -32,7 +32,7 @@
   }
   
   body {
-    background-image: url('https://img.freepik.com/premium-photo/abstract-modern-dark-with-rays-lines_129911-908.jpg?size=626&ext=jpg&ga=GA1.1.1826414947.1699056000&semt=ais');
+    background-color: rgb(243, 239, 239);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
