--- a/client/src/Components/UserReviews.css
+++ b/client/src/Components/UserReviews.css
@@ -1,8 +1,8 @@
 .user-reviews-container {
     text-align: center;
     padding: 20px;
-    background-color: black; /* Set the background color to black */
-  color: white; 
+    background-color: rgb(223, 208, 208); /* Set the background color to black */
+  color: rgb(17, 14, 14); 
   }
   
   .review-item {
